php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #45564 regex/pgsql visibility issue
Submitted: 2008-07-19 13:39 UTC Modified: 2008-07-21 16:23 UTC
From: Fedora at FamilleCollet dot com Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.3CVS-2008-07-19 (snap) OS: Linux (Fedora 9)
Private report: No CVE-ID: None
 [2008-07-19 13:39 UTC] Fedora at FamilleCollet dot com
Description:
------------
After successful compilation (gcc 4.3.0) pgsql shared extension doesn't load.

Simple proposal patch fixes this issue :
http://remi.fedorapeople.org/php-5.3.0-visibility2.patch

Regards

Reproduce code:
---------------
php -v


Expected result:
----------------
PHP 5.3.0-dev (cli) (built: Jul 19 2008 15:27:49) 
Copyright (c) 1997-2008 The PHP Group
Zend Engine v2.3.0, Copyright (c) 1998-2008 Zend Technologies


Actual result:
--------------
PHP Warning:  PHP Startup: Unable to load dynamic library '/usr/lib64/php/modules/pgsql.so' - /usr/lib64/php/modules/pgsql.so: undefined symbol: php_regfree in Unknown on line 0
PHP 5.3.0-dev (cli) (built: Jul 19 2008 15:02:29) 
Copyright (c) 1997-2008 The PHP Group
Zend Engine v2.3.0, Copyright (c) 1998-2008 Zend Technologies


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-07-21 16:23 UTC] jani@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 21 00:00:02 2026 UTC